--- a/src/containers/cartitems/main-cart.css
+++ b/src/containers/cartitems/main-cart.css
@@ -22,24 +22,24 @@
 .main-cart-item-brand {
     margin: 0 0 0px 0;
     color: black;
-    font-weight: bold;
+    /* font-weight: bold; */
     font-size: 24px;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
 }
 
 .main-cart-item-name {
     margin: 0 0 5px 0;
     color: #000000ee;
     font-size: 22px;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     padding-top: 0;
 }
 
 .main-cart-item-price {
     margin: 0 0 10px 0;
     color: black;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 20px;
+    /* font-weight: bold; */
 }
 
 .main-cart-size-holder {
@@ -125,6 +125,11 @@
     /* padding: 4px; */
     border: 1px solid black;
     cursor: pointer;
+    font-size: 30px;
+}
+
+.main-cart-counter-control-number{
+    font-size: 20px;
 }
 
 .main-cart-item-image-holder {
@@ -135,8 +140,11 @@
 .main-cart-item-image {
     /* width: 200px;
     height: auto; */
-    height: 100%;
+    /* height: 100%;
     width: 8vw;
+    object-fit: contain; */
+    width: 14vw;
+    height: 14vw;
     object-fit: contain;
 }
 
@@ -153,14 +161,14 @@
 
 .p-title {
     font-size: 20px;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     margin: 0 10px 10px 0;
     color: #000000bb;
 }
 
 .p-value {
     font-size: 20px;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     font-weight: bold;
     margin: 0 0 10px 0;
 }
